Sat Mar  4 01:20:05 CET 2006  Guillaume Desmottes <cass@skynet.be>

	* src/fe-gnome/main-window.c:
	* data/xchat-gnome.glade:
	  - We can now use the "change nick dialog" to be marked as away.
	  - Use gtk_dialog_run instead of a non blocking call. It's fix a bug
	    where callbacks were connected each time we opened the dialog and
	    so called too many times.
	  - Rename label "on all servers" to "Apply on all server" to be
	    clearer and more HIG compliant.
	    

Thu Mar  2 22:46:51 CET 2006  Christian Persch <chpe@gnome.org>

	* src/fe-gnome/dcc-window.c:
	* data/dcc-accept.glade:
	* data/Makefile.am:
	  - Use GtkMessageDialog instead of Glade. (#333178)

Tue Feb 28 18:30:25 MST 2006  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/main-window.c:
	* src/fe-gnome/main-window.h:
	* src/fe-gnome/apps_xchat.schemas.in:
	  - Save and restore the position of the main window, since metacity
	    is absolutely refusing to do this for us, even though we're
	    technically session-managed.

Tue Feb 28 18:06:12 MST 2006  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/preferences.c:
	  - Actually hook up "show colors" option.

Tue Feb 28 15:38:40 MST 2006  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/userlist-gui.c:
	  - Pop the list up 10 pixels to the right of the mouse button, rather
	    than 100 pixels to the left.  This should prevent the pop-up
	    overlapping the "Users" button in all but the most pathological
	    cases, for users who don't realize that they can click anywhere
	    rather than only on the button.

Tue Feb 28 15:32:15 MST 2006  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/plugins.c:
	  - Guard against loading plugins multiple times (#328907)

Tue Feb 28 15:09:24 MST 2006  David Trowbridge <trowbrds@gmail.com>

	* configure.ac:
	  - Fix output when checking for libnotify

Tue Feb 28 05:48:41 MST 2006  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/main-window.c:
	* src/fe-gnome/navigation-tree.c: